Sat Aug 14 15:11:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.h (rb_objspace_each_objects): used in objspace.

	* vm_core.h (rb_{get,set,reset}_coverages): used in coverage.

	* include/ruby/intern.h (rb_time_interval): used in io/wait.

	* include/ruby/intern.h (rb_make_backtrace, rb_make_exception):
	  used in ripper.

	* node.h (rb_parser_{malloc,realloc,calloc,free}): ditto.

Fri Aug 13 22:48:39 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_truncate): Pathname#truncate translated
	  from pathname.rb.

Fri Aug 13 16:11:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (MiniTest::Unit.new): extend before initialize.
	  [ruby-dev:41970]

	* lib/test/unit.rb (MiniTest::Unit.autorun): use Test::Unit::Mini.

Thu Aug 12 23:39:02 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_make_symlink): Pathname#make_symlink
	  translated from pathname.rb.

Thu Aug 12 21:18:27 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_lstat): Pathname#lstat translated
	  from pathname.rb.

Thu Aug 12 05:58:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h (rb_char_to_option_kcode): used in
	  ripper.

	* node.h (rb_reserved_word): ditto.

Thu Aug 12 00:19:53 2010  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): disable
	  echo.  [ruby-dev:41966]

Wed Aug 11 23:28:22 2010  Kenta Murata  <mrkn@mrkn.jp>

	* lib/cmath.rb (CMath.sqrt): use floating-point value.
	  [ruby-core:31672] [Bug #3678]

	* test/test_cmath.rb: added for testing lib/cmath.rb.

Wed Aug 11 20:57:25 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: merge from branches/ruby_1_9_2, and move io/console.
	  [ruby-dev:41924]

Wed Aug 11 11:01:15 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c: don't use // comment.

Wed Aug 11 06:18:20 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_stat): Pathname#stat translated